# Top_Tier_Trading

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  BADGES.md  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  README_DEPLOY.md  alembic.ini  bandit.yml  docker-compose.yml  mypy.ini  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
alembic/: env.py
api/: .eslintrc.json  Dockerfile  README.md  package.json  tsconfig.json
backtester/: Dockerfile  requirements.txt
conf/: coinbase_private_key.pem  config.live-btc.yaml  config.yaml  secrets.env  secrets.env.example
docker/: docker-compose.yml  ops_bot.Dockerfile  prometheus.yml
docs/: 00_project_header.md  01_architecture.md  BRANCH_PROTECTION.md  COINBASE_INTEGRATION.md  GOVERNANCE.md  OPERATIONS.md  RELEASE_NOTES.md  RL_GUIDE.md  SECURITY.md  _index.md  ops_runbook.md  risk_policy.md
env/: .env.example  vault_paths.md
ops-ui/: Dockerfile  README.md  next.config.js  package.json
scripts/: README.md  __init__.py  backtest.py  bootstrap.ps1  bootstrap.sh  build.ps1  build.sh  calibrate_vol.py  coverage_badge.py  coverage_summary.py  down.ps1  down.sh  enable-live.ps1  enable-live.sh  event_log_to_csv.py  generate_json_schema.py  health_check.py  init_db.py  lint.ps1  lint.sh  live.py  logs.ps1  logs.sh  migrate.ps1  migrate.sh  migrate_db.py  ops_bot.py  ops_bot_async.py  paper.ps1  paper.sh  paper_trade.py  run_parity.py  sdk_integration_harness.py  sdk_integration_test.py  test.ps1  test.sh  train_deep_rl.py  up.ps1  up.sh  verify_exportables.py  (+1 more)
tests/: README.md  conftest.py  test_alert_and_metrics.py  test_alert_service_secrets.py  test_coinbase_sdk_wrapper.py  test_deep_q_network_strategy.py  test_deep_rl_training.py  test_ops_bot_concurrency.py  test_price_cache.py  test_risk_service.py  test_risk_volatility.py  test_sdk_integration.py  test_sma_strategy.py  test_vault_secrets_manager.py
workers/: Dockerfile  README.md  __init__.py  (+1 more)
workers/src/workers/services/: .pre-commit-config.yaml  __init__.py  alert_service.py  data_feed.py  db_state_store.py  event_bus.py  event_store.py  execution_service.py  metrics_service.py  price_cache.py  publishers.py  pyproject.toml  rabbitmq_event_bus.py  requirements-runtime.txt  risk_service.py  state_store.py
(+88 files in other folders)
