[tool.poetry]
name = "atlas-trade"
version = "0.1.0"
description = "Multi-agent crypto trading platform with Coinbase Advanced Trade integration."
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
# Core application runtime dependencies
aiohttp = "^3.9.4"
websockets = "^11.0.3"
tenacity = "^8.2.3"
pydantic = "^2.4.2"
python-dotenv = "^1.0.1"
async-timeout = "^4.0.3"
prometheus-client = "^0.17.1"
pandas = "^2.1.4"
numpy = "^1.26.4"
scikit-learn = "^1.4.1"
matplotlib = "^3.8.0"
sqlalchemy = "^2.0"
asyncpg = "^0.28"
redis = "^4.5"
aio-pika = "^9.1.0"
slack-bolt = "^1.18.0"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
coverage = "^7.5.0"

[tool.poetry.group.lint]
optional = true

[tool.poetry.group.lint.dependencies]
ruff = "^0.4.4"
bandit = "^1.7.9"
safety = "^3.2.3"
mypy = "^1.10.0"
alembic = "^1.13.1"

[build-system]
requires = ["poetry-core>=1.2.0]
build-backend = "poetry.core.masonry.api"