[tool.poetry]
name = "Top_Tier_Trading"
version = "0.1.0"
description = "Top_Tier_Trading – lint/static analysis configured with Poetry groups and pre-commit."
authors = ["Brad <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"

[tool.poetry.group.lint]
optional = true

[tool.poetry.group.lint.dependencies]
pre-commit = "^3.7"
ruff = "^0.6"
mypy = "^1.11"
bandit = "^1.7"
safety = "^3.2"
types-requests = "*"
types-python-dateutil = "*"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = ["tests/fixtures", ".venv", "venv", "build", "dist"]

[tool.ruff.lint]
extend-select = ["I"]

[tool.mypy]
python_version = "3.12"
warn_unused_configs = true
ignore_missing_imports = true
exclude = '(^tests/|^docs/|^scripts/)'
explicit_package_bases = true
# NOTE: Do NOT enable namespace_packages here; it causes duplicate-module names with workers/src/workers layout
mypy_path = ["workers/src"]
files = ["workers/src/workers"]
